# cube

./: Cargo.toml
src/: camera.rs  lib.rs  main.rs
src/platform/: callback.rs  mod.rs  time.rs
src/render/: camera.rs  chunk.rs  light.rs  lines.rs  mod.rs  shadow.rs  vert.rs  voxel.rs
src/render/shaders/: debug_light.wgsl  debug_shadow.wgsl  light.wgsl  shadow.wgsl  voxel.wgsl
