[package]
name = "cube"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["hot-reload", "glam/glam-assert"]
hot-reload = ["libc"]

[dependencies]
glam = "0.30.9"
env_logger = "0.10"
log = "0.4"
libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.30", default-features = false, features = [
	"rwh_06",
	"x11",
] }
wgpu = { version = "27.0", default-features = false, features = [
	"std",
	"vulkan",
	"wgsl",
] }
pollster = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
